@@ -41,7 +41,7 @@ pixbuf_proto_request (const char *req,
 
   if (fd == -1)
     {
-      fd = pixbuf_proto_get_socket (err);
+      fd = sapwood_client_get_socket (err);
       if (fd == -1)
 	return FALSE;
     }
